# fondat-aws

./: pyproject.toml
fondat/aws/: __init__.py  secrets.py
tests/: test_secrets.py
