[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 96
target-version = ['py38']

[tool.poetry]
name = "fondat-aws"
version = "3.0a20"
description = "Fondat package for Amazon Web Services."
readme = "README.md"
authors = ["fondat-aws authors"]
homepage = "https://github.com/fondat/fondat-aws/"
documentation = "https://github.com/fondat/fondat-aws/wiki"
license = "MIT"
keywords = ["asgi", "framework", "resource", "openapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "fondat" }
]

[tool.poetry.dependencies]
aiobotocore = "^1.3"
python = "^3.9"
fondat-core = "^3.0b82"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pre-commit = "^2.13"
pytest = "^6.2"
pytest-asyncio = "^0.14"
pytest-cov = "^2.12"
